--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/node": "^16.4.13",
+		"@types/uuid": "^8.3.1",
 		"@typescript-eslint/parser": "^4.29.0",
 		"eslint": "^7.32.0",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"axios": "^0.21.1",
+		"express": "^4.17.1",
+		"uuid": "^8.3.2"
 	}
 }
